# hcr

./: .env  README.md  package-lock.json  pyproject.toml  render.yaml  vercel.json
backend/: main.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: AboutUs.js  App.js  EditOcrText.js  Footer.js  LandingPage.js  LoginPage.js  NavBar.js  PersonalPage.js  Profile.js  firebase.js
