[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "dariaar",email = "droso00@fesb.hr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.75.0,<0.76.0)",
    "uvicorn (>=0.15.0,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hcr"
version = "0.1.0"
description = "A simple handwriting recognition app"
authors = [
    "dariaar droso00@fesb.hr"
]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.75.0,<0.76.0"
uvicorn = ">=0.15.0,<0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"